@@ -1119,3 +1119,41 @@ AT_CHECK([$COMPILE_ONLY --copy copybook1 --copy copybook4 prog.cob], [1], [],
 ])
 
 AT_CLEANUP
+
+
+AT_SETUP([COPY LONG REPLACE])
+AT_KEYWORDS([copy replace])
+
+AT_DATA([copy.inc], [
+       01  TEST-FIRST  PIC X(2) VALUE "OK".
+       01  TEST-SECOND PIC X(2) VALUE "OK".
+])
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       COPY "copy.inc"
+            REPLACING TRAILING ==FIRST== BY ==VAR1==
+                      TRAILING ==SECOND== BY ==VAR2==.
+       REPLACE ==
+              01  TEST-VAR1  PIC X(2) VALUE "OK".
+              01  TEST-VAR2 PIC X(2) VALUE "OK".
+	      == BY ==
+	             PROCEDURE        DIVISION.
+           DISPLAY TEST-VAR1 NO ADVANCING
+           END-DISPLAY.
+           DISPLAY TEST-VAR2 NO ADVANCING
+           END-DISPLAY.
+           STOP RUN.
+	   ==.
+       COPY "copy.inc"
+            REPLACING TRAILING ==FIRST== BY ==VAR1==
+                      TRAILING ==SECOND== BY ==VAR2==.
+])
+
+AT_CHECK([$COMPILE prog.cob])
+
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [OKOK])
+
+AT_CLEANUP
